Prod-EU/force-app/main/default/objects/SDJob_Temp__c/SDJob_Temp__c.object-meta.xml
<CustomObject>
    <label>SDJob Temp</label>
    <nameField>
        <displayFormat>SJT-{000000}</displayFormat>
        <label>SDJob Jobs Schedule Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDJob Temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>