Prod-EU/force-app/main/default/objects/SDJob_Temp__c/fields/Create_SDJob__c.field-meta.xml
<CustomField>
    <fullName>Create_SDJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create SDJob</label>
    <type>Checkbox</type>
</CustomField>