Prod-EU/force-app/main/default/objects/SDJob_Temp__c/fields/Doclist__c.field-meta.xml
<CustomField>
    <fullName>Doclist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doclist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>