Prod-EU/force-app/main/default/objects/SDJob_Temp__c/fields/Sobject_Id__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobject Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>