Prod-EU/force-app/main/default/objects/SDJob_Temp__c/fields/Sobject_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>